--- a/style.css
+++ b/style.css
@@ -599,8 +599,8 @@ footer {
 
 
     .about a {
-        display: inline;
-        font-size: 0.8rem;
+        /* display: inline; */
+        font-size: 1.1rem;
         padding: 7px;
     }
 
@@ -630,12 +630,13 @@ footer {
     .address {
         width: 100%;
         padding: 50px 0;
-        margin: 3px 25px;
+        /* margin: 3px 25px; */
     }
 
     .about div {
         width: 100%;
-        text-align: center;
+        padding-left: 4%;
+        /* text-align: center; */
     }
 
     .about div:last-child {
@@ -644,23 +645,26 @@ footer {
 
     .destinations div {
         width: 100%;
+        margin-left: -4%;
     }
 
     .about p {
-        font-size: 1.2rem;
-        margin: 19% 5% 5% 5%;
+        font-size: 1.6rem;
+        /* margin: 19% 5% 5% 5%; */
 
     }
 
     .address div p {
         text-align: left;
         font-size: 1.2rem;
-        margin: 3px 43px;
+        margin-left: 4%;
+        /* margin: 3px 43px; */
     }
     .address div h5 {
         text-align: left;
         font-size: 1.6rem;
-        margin: 52px 0 5px 43px;
+        margin-left: 4%;
+        /* margin: 52px 0 5px 43px; */
     }
 
  
