--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@
     font-family: Proxima;
     src: url(./img/novah.ttf);
 }
+.reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease;
+  }
+  
+  .reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+  }
 
 body {
     background-image: linear-gradient(0deg, #d7d7d7 0%, #ffffff 100%);
