change text style

--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ body {
 
 .thalie-content p {
     margin-right: 9%;
+    font-size: smaller;
 }
 
 .thalie-content img {
@@ -292,6 +293,7 @@ body {
 
 .different-cart p {
     margin: 0px 8%;
+    font-size: smaller;
 }
 
 .massage {
