--- a/style.css
+++ b/style.css
@@ -393,7 +393,7 @@ footer {
 
 
 
-@media screen and (max-device-width: 550px) {
+@media screen and (max-device-width: 600px) {
 
     .nav {
         display: none;
@@ -662,5 +662,39 @@ footer {
         text-align: left;
         font-size: 1.6rem;
         margin-left: 6%;
+    }
+}
+
+@media screen and (max-device-width: 1030px){
+ 
+    .nav div:nth-child(3) a{
+        font-size: 30px;
+    }
+    .nav div {
+        margin-left: 4%;
+    }
+    .land h2{
+        left: 164px;
+    }
+    .mauritius{
+        left: 110px;
+    }
+    .beachfront {
+        width: 32%;
+    }
+    .vacation-cart{
+        width: 100%;
+    }
+    .escapes{
+        left: 25px;
+    }
+    .locations{
+        width: 100%;
+    }
+    .different-cart{
+        width: 100%;
+    }
+    .footer{
+        width: 90%;
     }
 }
