--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
     font-size: 2.5rem;
     color: #ffffff;
     font-weight: bold;
+    font-family: Proxima;
 }
 
 .mauritius {
@@ -393,7 +394,7 @@ footer {
 
 
 
-@media screen and (max-device-width: 600px) {
+@media screen and (max-device-width: 550px) {
 
     .nav {
         display: none;
@@ -460,7 +461,7 @@ footer {
     .nav div a {
         font-size: 0.9rem;
         display: block;
-        padding: 4% 1%;
+        padding: 7% 1%;
 
     }
 
@@ -664,7 +665,7 @@ footer {
         margin-left: 6%;
     }
 }
-
+/* 
 @media screen and (max-device-width: 1030px){
  
     .nav div:nth-child(3) a{
@@ -697,4 +698,4 @@ footer {
     .footer{
         width: 90%;
     }
-}
+} */
