--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@ body {
     border-radius: 50%;
     border: none;
 }
+.mauritius div:last-child button:hover{
+    background-color: #2abe81;
+}
 
 .mauritius div:last-child button i {
     color: white;
@@ -249,6 +252,7 @@ body {
 
 .thalie-content button:hover {
     padding: 3.5% 8%;
+    background-color: #2abe81;
 }
 
 .different-headding {
@@ -273,6 +277,9 @@ body {
     padding: 32px 28px 21px 27px;
     border-radius: 50%;
 }
+.different-cart span:hover{
+    background-color: #f31131;
+}
 
 .different-cart {
     margin: auto;
@@ -281,6 +288,7 @@ body {
     width: 86%;
     padding-top: 5%;
 }
+
 
 .different-cart i {
     font-size: 2rem;
@@ -332,6 +340,9 @@ body {
     padding: 7px 25px;
     border-radius: 20px;
     margin: 15% 0%;
+}
+.contect-us button:hover{
+    background-color: #2abe81;
 }
 .contect-us h3 {
     font-size: 1.6rem;
